--- a/css/media.css
+++ b/css/media.css
@@ -1,6 +1,16 @@
+@media (min-width: 1601px) {
+	#about .container .about_box .about_box_photo img {
+		height: 40vh;
+	}
+}
+
 @media (max-width: 1600px) {
+	.slider.slick-initialized.slick-slider {
+		border: none;
+	}
 	#home {
 		background-size: cover;
+		background-image: url(../images/background1600.png);
 	}
 	#home .name_box .name {
 		font-size: 9em;
@@ -8,9 +18,21 @@
 	#home .name_box h1 {
 		font-size: 2em;
 	}
+	.slider {
+		width: 85%;
+	}
+	#about .container h2 {
+		margin-bottom: 5%;
+	}
+	#about .container .about_box .about_box_photo {
+		margin-left: 10px;
+	}
 }
 
 @media (max-width: 1400px) {
+	#home {
+		background-image: url(../images/background1400.png);
+	}
 	#home .name_box {
 		margin-top: 0;
 	}
@@ -27,10 +49,79 @@
 		font-size: 1.5em;
 		margin-top: -30px;
 	}
+	#about .container {
+		width: 70%;
+	}
+	#about .container .about_box .about_box_photo {
+		margin-left: 10px;
+	}
+	.slick-prev.slick-arrow {
+		left: -100px;
+	}
+	.slick-next.slick-arrow {
+		right: -100px;
+	}
+	#contacts .form_box h2 {
+		margin-top: 50px;
+		margin-bottom: 0;
+	}
+	#contacts .form_box #my_form {
+		margin-top: 30px;
+	}
+	#contacts .form_box p {
+		margin-top: 0;
+	}
+	.myContacts span {
+		display: flex;
+		-ms-align-items: center;
+		align-items: center;
+	}
 }
 
+@media (max-width: 1024px) {
+	#home {
+		background-image: url(../images/background1024.png);
+	}
+	.slick-prev.slick-arrow {
+		left: -60px;
+	}
+	.slick-next.slick-arrow {
+		right: -70px;
+	}
+	.menu_btn {
+		z-index: 999;
+	}
+}
+
+@media (max-width: 850px) {
+	#home {
+		background-image: url(../images/background850.png);
+	}
+	nav {
+		background-color: rgba(0, 0, 0, 0.8)
+	}
+	nav ul li a {
+		padding: 5vh;
+	}
+}
+
+@media (max-width: 800px) {
+	p {
+		font-size: .75em;
+	}
+	.slider {
+		width: 75%;
+	}
+
+}
 
 @media (max-width: 768px) {
+	#home {
+		background-image: url(../images/background768.png);
+	}
+	nav ul li a {
+		font-size: .9em;
+	}
 	#home .name_box {
 		width: 80%;
 	}
@@ -41,27 +132,37 @@
 		font-size: 1em;
 		margin-top: -20px;
 	}
-	nav {
-		width: 50%;
-		left: -40%;
-		background-color: rgba(0, 0, 0, .95);
+	#about .container {
+		width: 768px;
+		margin-bottom: 30px;
 	}
-	nav ul {
-		margin-left: -25px;
+	#about .container .skills_box {
+		-webkit-flex-direction: column;
+		-moz-flex-direction: column;
+		-ms-flex-direction: column;
+		-o-flex-direction: column;
+		flex-direction: column;
 	}
-	nav ul li a {
-		padding: 4vh;
-		text-align: center;
-		font-size: 1.3em;
+	#about .container .skills_box .skills_text {
+		width: 100%;
 	}
-	.menu_btn {
-		z-index: 9999;
+	#about .container .skills_box .skills_text p {
+		margin-right: 30px;
+	}
+	#about .container .skills_box .tagCloud {
+		width: 100%;
 	}
 }
 
 @media (max-width: 650px) {
 	#home .name_box .name {
 		font-size: 5em;
+	}
+}
+
+@media (max-width: 570px) {
+	nav ul li a {
+		font-size: .8em;
 	}
 }
 
@@ -118,5 +219,218 @@
 	#home .name_box h1 {
 		font-size: .5em;
 		margin-top: -10px;
+	}
+}
+
+@media (max-height: 1400px) {
+	#about {
+		height: auto;
+	}
+}
+
+@media (max-height: 800px) {
+	#about .container {
+		width: 80%;
+	}
+	#about .container h2, #portfolio h2, #contacts .form_box h2 {
+		font-size: 60px;
+	}
+	#about .container .about_box .about_box_text {
+		padding-top: 0;
+	}
+	#about .container .about_box .about_box_text .resume_button {
+		margin-top: 5px;
+	}
+	#about .container .skills_box .skills_text {
+		padding: 0 10px;
+	}
+	.menu_btn {
+		z-index: 1000;
+	}
+	.slick-prev.slick-arrow {
+		left: -70px;
+	}
+	.slick-next.slick-arrow {
+		right: -70px;
+	}
+	#about .container .skills_box .skills_text {
+		padding-left: 20px;
+		padding-bottom: 20px;
+	}
+	p {
+		font-size: .9em;
+	}
+	#about .container .about_box .about_box_text .resume_button {
+		font-size: .9em;
+	}
+}
+
+@media (max-height: 720px) {
+	#about {
+		height: auto;
+	}
+}
+
+@media (max-height: 550px) {
+	#home .name_box .name {
+		animation: none;
+		text-shadow: 0 0 20px rgba(10, 242, 242, 1);
+	}
+}
+
+
+@media (max-height: 450px) {
+	nav {
+		width: 25%;
+		left: -330px;
+	}
+	nav ul {
+		margin-top: 30vh;
+	}
+	nav ul li a {
+		padding: 4vh;
+		padding-left: 20px;
+	}
+	#about .container {
+		width: 90%;
+	}
+	.slick-prev.slick-arrow {
+		left: -70px;
+	}
+	.slick-next.slick-arrow {
+		right: -75px;
+	}
+	#about .container h2 {
+		margin-bottom: 0;
+	}
+	#about .container .about_box {
+		display: block;
+		overflow: hidden;
+	}
+	#about .container .about_box .about_box_text h3 {
+		margin-bottom: 0;
+		font-size: 1.1em;
+	}
+	#about .container .about_box .about_box_text {
+		display: block;
+		box-sizing: border-box;
+	}
+	#about .container .about_box .about_box_photo {
+		display: block;
+		margin-top: 20px;
+		margin-left: 10px;
+		float: right;
+		width: 30%;
+	}
+	.slick-slider .slick-track {
+		display: flex;
+		align-items: center;
+	}
+	p {
+		font-size: .75em;
+	}
+	#about .container .about_box .about_box_text .resume_button {
+		font-size: .75em;
+		display: block;
+		margin: 0 auto;
+		margin-top: 60px;
+	}
+	#about .container .about_box .about_box_text p{
+		font-size: .9em;
+		margin-top: 1.2em;
+	}	
+	#about .container .skills_box .skills_text {
+		padding-bottom: 0;
+	}
+	#about .container .skills_box .skills_text p {
+		text-align: justify;
+		margin-top: 5px;
+		margin-bottom: 0;
+	}
+	.tagcloud--item img {
+		width: 75%;
+	}
+	#portfolio .sites, #portfolio .codeExamples {
+		-ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    width: 70%;
+	}
+	#portfolio .sites div, #portfolio .codeExamples div {
+		height: 250px;
+	}
+	#portfolio h2 {
+		margin-bottom: 20px;
+	}
+	#portfolio .sites, #portfolio .codeExamples {
+		margin-bottom: 30px;
+	}
+	#portfolio h3 {
+		font-size: 1em;
+		margin-bottom: 0;
+	}
+	#contacts .form_box h2 {
+		margin-top: 20px;
+	}
+	#contacts .form_box {
+		width: 57%;
+	}
+	#contacts .form_box #my_form, #contacts .form_box p {
+		width: 100%;
+		font-size: 1em;
+	}
+	#contacts .form_box #my_form button {
+		width: 30%;
+		margin-left: 70%;
+	}
+	#contacts .form_box #my_form p input, #contacts .form_box #my_form p textarea {
+		margin-bottom: 10px;
+	}
+	#contacts .form_box #my_form p textarea {
+		height: 100px;
+	}
+	#contacts .form_box #my_form p label {
+		bottom: 10px;
+	}
+}
+
+@media (max-height: 320px) {
+	nav ul li a {
+		font-size: .75em;
+	}
+	#about .container h2, #portfolio h2, #contacts .form_box h2 {
+		font-size: 40px;
+	}
+	#about .container .about_box .about_box_text h3 {
+		font-size: .9em;
+	}
+	#about .container .about_box .about_box_text .resume_button {
+		font-size: .8em;
+		margin-top: 30px;
+	}
+	#about .container .about_box .about_box_text p{
+		font-size: .8em;
+	}	
+	#about .container .skills_box .skills_text p {
+		font-size: .6em;
+	}
+	#portfolio .sites div, #portfolio .codeExamples div {
+		height: 200px;
+	}
+	#contacts .form_box #my_form, #contacts .form_box p {
+		font-size: .75em;
+	}
+}
+
+
+@media screen and (orientation: portrait) {
+	#rotate_screen {
+		display: -webkit-flex;
+		display: -moz-flex;
+		display: -ms-flex;
+		display: -o-flex;
+		display: flex;
+	}
+	.menu_btn {
+		z-index: 0;
 	}
 }
